--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -13,7 +13,7 @@
 
 {{ template "_internal/google_analytics.html" . }}
 
-{{ $css := resources.Match "css/*.css" }}
+{{ $css := resources.Match "css/*.css" | resources.Concat "css/bundle.css" }}
 {{ range $css }}
   {{ $styles := . | minify | fingerprint }}
   <link rel="stylesheet" href="{{ $styles.Permalink }}">
